--- a/demo/print/xtpprint/xtpprint.vcxproj
+++ b/demo/print/xtpprint/xtpprint.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{9a8380f1-0f84-4eda-944a-218e720b5822}</ProjectGuid>
-    <RootNamespace>xtpdump</RootNamespace>
+    <RootNamespace>xtpprint</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,7 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="xtpdump.cpp" />
+    <ClCompile Include="xtpprint.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
