--- a/demo/prices/Makefile
+++ b/demo/prices/Makefile
@@ -1,6 +1,6 @@
-all: TextTrader
-TextTrader:
-	g++ -std=c++11 -I./CTP -L/lib64 -o $@ TextTrader.cpp thostmduserapi_se.so -lcurses -ltinfo
+all: prices
+prices:
+	g++ -std=c++11 -I./CTP -L/lib64 -o $@ prices.cpp thostmduserapi_se.so -lcurses -ltinfo
 clean:
-	rm TextTrader
+	rm prices
 
