--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /demo/print/ostprint/.vs/ostprint/v15/Browse.VC.db
+/demo/print/ostprint/.vs/ostprint/v15
+/demo/print/ostprint/ostprint.sln
