增加6.6.9接口，升级STP接口至最新版，解决一些问题

--- a/ctp2华鑫证券STP/6.3.15_20190220/CMakeLists.txt
+++ b/ctp2华鑫证券STP/6.3.15_20190220/CMakeLists.txt
@@ -19,7 +19,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   target_link_libraries(${mdapi} -lxfastmdapi)
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  target_link_libraries(${mdapi} -lxfastmdapi -lpthread -lboost_system -lboost_thread)
+  target_link_libraries(${mdapi} -lxfastmdapi -lpthread)
 endif()
 set_target_properties(${mdapi} PROPERTIES OUTPUT_NAME "thostmduserapi_se")
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
