--- a/ctp2华鑫证券STP/CMakeLists.txt
+++ b/ctp2华鑫证券STP/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(6.5.1_20200908)
 add_subdirectory(6.3.19_P1_20200106)
 add_subdirectory(6.6.1_P1_20210406)
 add_subdirectory(6.6.7_20220304)
+add_subdirectory(6.6.9_20220920)
