--- a/widgets/QuoteBoard/.gitignore
+++ b/widgets/QuoteBoard/.gitignore
@@ -12,6 +12,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+package-lock.json
 
 # Editor directories and files
 .idea
@@ -21,6 +22,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
 
 #Electron-builder output
 /dist_electron
