增加-t选项以支持指定用交易api连接交易前置

--- a/demo/ctpping/makefile.linux
+++ b/demo/ctpping/makefile.linux
@@ -1,4 +1,4 @@
 all: ctpping
 ctpping:
-	g++ -std=c++11 -I. -L. -o ctpping ctpping.cpp thostmduserapi_se.so
+	g++ -std=c++11 -I. -L. -o ctpping ctpping.cpp thostmduserapi_se.so thosttraderapi_se.so
 
