--- a/demo/prices/makefile.win32
+++ b/demo/prices/makefile.win32
@@ -1,5 +1,5 @@
-all: TextTrader.exe
-TextTrader.exe:
+all: prices.exe
+prices.exe:
 	cl /DWIN32 /I .\PDCurses /I .\CTP prices.cpp /link /LIBPATH:.\PDCurses /LIBPATH:.\CTP thostmduserapi_se.lib pdcurses.lib advapi32.lib user32.lib /OUT:prices.exe
 clean:
 	del *.obj prices.exe
